[package]
name = "el"
version = "0.1.2"
edition = "2021"
authors = ["Garmelon <garmelon@plugh.de>"]
description = "Write and manipulate HTML elements as data"
repository = "https://github.com/Garmelon/el"
license = "MIT OR Apache-2.0"
keywords = ["html", "svg", "mathml", "hiccup"]
categories = ["web-programming", "template-engine"]

[features]
axum = ["dep:axum-core", "dep:http"]

[dependencies]
axum-core = { version = "0.4.5", optional = true }
http = { version = "1.1.0", optional = true }

[lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.let_underscore_drop = "warn"
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"
